--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
 
   <body>
-    <h1>To-Do List</h1>
+    <h1>Todo List</h1>
     <button id ="displayTodosButton">Display To-Dos</button>
     <button id='toggleAllButton'>Toggle All</button>
     
