--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
     <input id='toggleTodoPositionInput' type='number'>
     </div>
     
+      <!--- List to hold user todos --->
     <ul>
     </ul>
     
