--- a/index.html
+++ b/index.html
@@ -30,6 +30,6 @@
     
     <ul>
     </ul>
-    <script src="js/script.js"></script>
+    <script src="script/script.js"></script>
   </body>
 </html>
