--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Todo List</title>
+    <title>To-do List</title>
     <link id="favicon" rel="icon" href="https://hyperdev.com/favicon.ico" type="image/x-icon">
       
   </head>
   <body>
-    <h1>Todo List</h1>
+    <h1>To-do List</h1>
 
     <div>
       <button onclick="handlers.toggleAll()">Toggle All</button>
