--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       
   </head>
   <body>
-    <h1>To-do List</h1>
+    <h1>Todo List</h1>
 
     <div>
       <button onclick="handlers.toggleAll()">Toggle All</button>
