--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <h1>Todo List</h1>
 
     <div>
-      <button onclick="handlers.toggleAll()">Toggle All</button>
+      <button onclick="handlers.toggleAll()">Toggle Everything</button>
     </div>
     
     <div>
